# pong

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  vcpkg.json
app/src/: digit.c  digit.h  pong.c  sound.h
src/: pong.cpp  pong.h
src/c/: digit.c  digit.h  pong.c  pong.h  sound.c  sound.h  typedefs.h
src/css/: index.css
src/html/: index.html
web/: package-lock.json  package.json
web/src/: index.css  index.html
